--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+<html>
     <head>
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,38 +7,44 @@
         <title>Video Games</title>
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <div class="container">
-                <h2>Accueil</h2>
-                <div class="d-flex justify-content-evenly">
-                    <div class="card" style="width: 18rem;">
-                        <a href="./public/best.html" class="link-offset-2 link-underline link-underline-opacity-0">
-                            <div class="card-body">
-                                <h3 class="card-title">Les mieux notés</h5>
-                                <p class="card-text">Quels sont les incontournables ?</p>
-                            </div>
-                        </a>
+        <div class="d-flex flex-column min-vh-100">
+            <header>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                        <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
                     </div>
-                    <div class="card" style="width: 18rem;">
-                        <a href="./public/categories.html" class="link-offset-2 link-underline link-underline-opacity-0">
-                            <div class="card-body">
-                                <h3 class="card-title">Catégories</h5>
-                                <p class="card-text">Envie d'aventure ? De frisson ? D'énigmes ?</p>
-                            </div>
-                        </a>
+                </nav>
+            </header>
+            <main class="flex-grow-1 d-flex">
+                <div class="container d-flex flex-column align-items-center flex-grow-1 justify-content-evenly">
+                    <h2>Accueil</h2>
+                    <div class="d-flex justify-content-evenly w-100">
+                        <div class="card" style="width: 18rem;">
+                            <a href="./public/games.html" class="link-offset-2 link-underline link-underline-opacity-0">
+                                <div class="card-body">
+                                    <h3 class="card-title">Général</h5>
+                                    <p class="card-text">Tous les jeux</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <a href="./public/categories.html" class="link-offset-2 link-underline link-underline-opacity-0">
+                                <div class="card-body">
+                                    <h3 class="card-title">Catégories</h5>
+                                    <p class="card-text">Envie d'aventure ? De frisson ? D'énigmes ?</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="/public/new/newGame.html" class="btn btn-outline-success">Ajouter un jeu</a>
+                        <a href="/public/new/newCategory.html" class="btn btn-outline-success">Ajouter une categorie</a>
                     </div>
                 </div>
-            </div>
-        </main>
-        <footer class="fixed-bottom d-flex justify-content-center">
-            <p>Fait par Jowy avec ❤️</p>
-        </footer>
+            </main>
+            <footer class="fixed-bottom d-flex justify-content-center mt-auto">
+                <p>Fait par Jowy avec ❤️</p>
+            </footer>
+        </div>
     </body>
 </html>
