--- a/client/public/categories.html
+++ b/client/public/categories.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-    <html>
+<html>
     <head>
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href='../assets/style/style.css'>
-        <title>Video Games</title>
+        <title>Categories</title>
     </head>
     <body>
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
+                    <a href="/public/newGame.html" class="btn btn-outline-success">Ajouter un jeu</a>
                     <div id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a href="./best.html" class="nav-link">Les mieux notés</a>
+                                <a href="./games.html" class="nav-link">Tous les jeux</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./categories.html" class="nav-link">Catégories</a>
-                            </li>     
-                            <li class="nav-item">
-                                <a href="./last.html" class="nav-link">Dernières sorties</a>
                             </li>
                         </ul>
                 </div>
