cat to be done + ref to be handeled

--- a/client/public/games.html
+++ b/client/public/games.html
@@ -30,9 +30,21 @@
             <div class="container">
                 <h2>Tous les jeux</h2>
             </div>
-            <tbody id="listGames">
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Nom</th>
+                    <th>Plateforme</th>
+                    <th>Année de sortie</th>
+                    <th>Catégories</th>
+                    <th>Détails</th>
+                    <th>Suppression</th>
+                  </tr>
+                </thead>
+                <tbody id="listGames">
 
-            </tbody>
+                </tbody>
+            </table>
         </main>
         <footer class="fixed-bottom d-flex justify-content-center">
             <p>Fait par Jowy avec ❤️</p>
