Refactor category selection in detailsGame.js

--- a/client/public/details/detailsGame.html
+++ b/client/public/details/detailsGame.html
@@ -45,9 +45,11 @@
                 </div>
                 <div class="row">
                     <div class="col-6">
-                    <div class="form-group">
-                        <label for="categories">Catégories</label>
-                        <input type="text" class="form-control" id="categories">
+                    <div class="form-group d-flex flex-column">
+                        <label for="categories">Catégories (catégorie(s) du jeu sélectionnée(s) par défaut)</label>
+                        <select id="categories" multiple>
+
+                        </select>
                     </div>
                     </div>
                     <div class="col-6">
