Add category and detailsCategory scripts

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
                             <a href="./public/categories.html" class="link-offset-2 link-underline link-underline-opacity-0">
                                 <div class="card-body">
                                     <h3 class="card-title">Catégories</h5>
-                                    <p class="card-text">Envie d'aventure ? De frisson ? D'énigmes ?</p>
+                                    <p class="card-text">Consultez les catégories</p>
                                 </div>
                             </a>
                         </div>
