--- a/client/public/details/detailsGame.html
+++ b/client/public/details/detailsGame.html
@@ -18,10 +18,10 @@
                         <div id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a href="./games.html" class="nav-link">Tous les jeux</a>
+                                    <a href="../games.html" class="nav-link">Tous les jeux</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="./categories.html" class="nav-link">Catégories</a>
+                                    <a href="../categories.html" class="nav-link">Catégories</a>
                                 </li>     
                             </ul>
                         </div>
@@ -47,7 +47,7 @@
                     <div class="col-6">
                     <div class="form-group d-flex flex-column">
                         <label for="categories">Catégories (catégorie(s) du jeu sélectionnée(s) par défaut)</label>
-                        <select id="categories" multiple>
+                        <select id="categories" class="form-control" multiple>
 
                         </select>
                     </div>
