--- a/client/public/games.html
+++ b/client/public/games.html
@@ -12,7 +12,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
-                    <a href="/public/newGame.html" class="btn btn-outline-success">Ajouter un jeu</a>
+                    <a href="/public/new/newGame.html" class="btn btn-outline-success">Ajouter un jeu</a>
                     <div id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
