refacto + vérification champs obligatoires + vérification date

--- a/client/public/details/detailsGame.html
+++ b/client/public/details/detailsGame.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Détails</title>
         <link rel="stylesheet" href="../../assets/style/style.css">
-        <script type="module" src="../../assets/script/detailsGame.js"></script>
+        <script type="module" src="../../assets/script/details/detailsGame.js"></script>
     </head>
     <body>
         <main>
@@ -32,13 +32,13 @@
                 <div class="row">
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="name">Titre</label>
+                        <label for="name">Titre*</label>
                         <input type="text" class="form-control" id="name">
                     </div>
                     </div>
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="platform">Plateforme</label>
+                        <label for="platform">Plateforme*</label>
                         <input type="text" class="form-control" id="platform">
                     </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-6">
                     <div class="form-group d-flex flex-column">
-                        <label for="categories">Catégories (catégorie(s) du jeu sélectionnée(s) par défaut)</label>
+                        <label for="categories">Catégories* (catégorie(s) du jeu sélectionnée(s) par défaut)</label>
                         <select id="categories" class="form-control" multiple>
 
                         </select>
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="year">Année de sortie</label>
+                        <label for="year">Année de sortie*</label>
                         <input type="text" class="form-control" id="year">
                     </div>
                     </div>
@@ -76,13 +76,13 @@
                 <div class="row">
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="developer">Développeur</label>
+                        <label for="developer">Développeur*</label>
                         <input type="text" class="form-control" id="developer">
                     </div>
                     </div>
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="publisher">Editeur</label>
+                        <label for="publisher">Editeur*</label>
                         <input type="text" class="form-control" id="publisher">
                     </div>
                     </div>
