--- a/client/public/details/detailsCategory.html
+++ b/client/public/details/detailsCategory.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Détails</title>
         <link rel="stylesheet" href="../../assets/style/style.css">
-        <script type="module" src="../../assets/script/detailsCategory.js"></script>
+        <script type="module" src="../../assets/script/details/detailsCategory.js"></script>
     </head>
     <body>
         <main>
@@ -32,7 +32,7 @@
                 <div class="row">
                     <div class="col-6">
                     <div class="form-group">
-                        <label for="name">Nom</label>
+                        <label for="name">Nom*</label>
                         <input type="text" class="form-control" id="name">
                     </div>
                     </div>
