--- a/client/public/games.html
+++ b/client/public/games.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href='../assets/style/style.css'>
         <title>Video Games</title>
-        <script type="module" src="../assets/script/listGame.js"></script>
+        <script type="module" src="../assets/script/list/listGame.js"></script>
     </head>
     <body>
         <header>
