--- a/client/public/new/newCategory.html
+++ b/client/public/new/newCategory.html
@@ -14,6 +14,16 @@
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
                         <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
+                        <div id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a href="../games.html" class="nav-link">Tous les jeux</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="../categories.html" class="nav-link">Catégories</a>
+                                </li>     
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </header>
@@ -23,7 +33,7 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="name">Nom</label>
+                                <label for="name">Nom*</label>
                                 <input type="text" class="form-control" id="name" required>
                             </div>
                         </div>
