--- a/client/public/new/newGame.html
+++ b/client/public/new/newGame.html
@@ -14,6 +14,16 @@
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
                         <a href="/" class="navbar-brand"><h1>Jeux Vidéos</h1></a>
+                        <div id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a href="../games.html" class="nav-link">Tous les jeux</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="../categories.html" class="nav-link">Catégories</a>
+                                </li>     
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </header>
@@ -23,13 +33,13 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="name">Titre</label>
+                                <label for="name">Titre*</label>
                                 <input type="text" class="form-control" id="name" required>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="platform">Plateforme</label>
+                                <label for="platform">Plateforme*</label>
                                 <input type="text" class="form-control" id="platform" required>
                             </div>
                         </div>
@@ -37,7 +47,7 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="categories">Catégories</label>
+                                <label for="categories">Catégories*</label>
                                 <select multiple class="form-control" id="categories" required>
                                 </select>
                             </div>
@@ -52,7 +62,7 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="year">Année de sortie</label>
+                                <label for="year">Année de sortie*</label>
                                 <input type="text" class="form-control" id="year" required>
                             </div>
                         </div>
@@ -66,13 +76,13 @@
                     <div class="row">
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="developer">Développeur</label>
+                                <label for="developer">Développeur*</label>
                                 <input type="text" class="form-control" id="developer" required>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="publisher">Editeur</label>
+                                <label for="publisher">Editeur*</label>
                                 <input type="text" class="form-control" id="publisher" required>
                             </div>
                         </div>
